# oraculo-thorus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  projects.example.yaml  rodar.md
apps/ai/: README.md  pyproject.toml
apps/ai/scripts/: bulk_ingest_drive.py  export_schema.py  seed_cities.py  test_extract_from_sheets.py  test_extract_ldp.py
apps/ai/src/oraculo_ai/: __init__.py
apps/ai/src/oraculo_ai/agents/: __init__.py
apps/ai/src/oraculo_ai/agents/qa/: __init__.py  agent.py  cli.py  graph.py  mcp_client.py  repository.py  schema.py  tools.py
apps/ai/src/oraculo_ai/agents/qa/tools/: __init__.py  create_project.py  get_project_scope.py  query_database.py
apps/ai/src/oraculo_ai/api/: __init__.py
apps/ai/src/oraculo_ai/core/: __init__.py  config.py  db.py
apps/ai/src/oraculo_ai/document_ai/: drive_scanner.py  extractor.py  pipeline.py  repository.py  schema_thorus.json  schemas.py  sheets_ingester.py
apps/ai/src/oraculo_ai/document_ai/parsers/: __init__.py  csv_parser.py  docx_parser.py  pdf_parser.py  txt_parser.py  xlsx_parser.py
apps/ai/src/oraculo_ai/drive/: __init__.py  folder_creator.py
apps/ai/src/oraculo_ai/events/: __init__.py
apps/ai/src/oraculo_ai/ingestion/: __init__.py  base.py  schema.py
apps/ai/src/oraculo_ai/ingestion/google_sheets/: batch.py  cli.py  connector.py  content.py  parser.py  pipeline.py  projects_repo.py  repository.py  vector_store.py
apps/ai/src/oraculo_ai/knowledge/: __init__.py
apps/ai/src/oraculo_ai/ldp/: __init__.py  master_reader.py  seed.py  sheet_generator.py
apps/ai/src/oraculo_ai/ldp/schema/: master_r04_schema.yaml
apps/ai/src/oraculo_ai/llm/: __init__.py  cli.py  client.py  schema.py
apps/ai/src/oraculo_ai/permissions/: __init__.py  check.py
apps/ai/src/oraculo_ai/projects/: __init__.py  drive.py  repository.py
apps/ai/src/oraculo_ai/retrieval/: __init__.py  cli.py  schema.py  search.py
apps/ai/src/oraculo_ai/scope/: __init__.py  parser.py  types.py  validator.py
apps/ai/tests/eval/: README.md  assertions.py  conftest.py  reporter.py  runner.py  schemas.py  test_eval_suite.py
apps/ai/tests/eval/datasets/: adversarial.yaml  ambiguity.yaml  drive_tools.yaml  edge_cases.yaml  ldp_tristate.yaml  project_identification.yaml  tool_routing.yaml
apps/ai/tests/fixtures/: master_r04.json
apps/ai/tests/integration/: test_schema_drift_vs_db.py  test_thor_query_ro_role.py
apps/ai/tests/unit/: test_drift_migrations_present.py  test_drive_folder_creator.py  test_format_project_name.py  test_ldp_master.py  test_ldp_sheet_generator.py  test_no_legacy_column_refs.py  test_parser_helpers.py  test_permissions.py  test_query_database_gating.py  test_query_database_limit.py  test_validator.py
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/scripts/: dev.ps1
apps/api/src/oraculo_api/: auth.py  logging_config.py  main.py
apps/api/src/oraculo_api/routes/: auth.py  documents.py  health.py  projects.py  query.py
apps/api/src/oraculo_api/schemas/: projects.py  query.py
apps/mcp-drive/: .env.example  Dockerfile  README.md  pyproject.toml
apps/mcp-drive/scripts/: smoke_http.ps1  test_tools.py
apps/mcp-drive/src/mcp_drive/: __init__.py  __main__.py  auth.py  backend.py  cache.py  classifiers.py  config.py  disciplines.py  ldp_classifier.py  logging.py  parsing.py  project_resolver.py  schemas.py  server.py  tools.py
apps/mcp-drive/tests/: test_backend_normalization.py  test_cache.py  test_classifiers.py  test_ldp_classifier.py  test_parsing.py
apps/web/: .env.local.example  Dockerfile  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ChatLayout.tsx  ChatWindow.tsx  Message.tsx  Sidebar.tsx  Sources.tsx  ThinkingIndicator.tsx
apps/web/src/hooks/: useChat.ts  useUser.ts
apps/web/src/lib/: api.ts  backend.ts  threads.ts  types.ts
docs/audit/: 2026-05-06-deploy-readiness.md  2026-05-06-thor-architecture.md
docs/deploy/: railway.md
docs/superpowers/specs/: 2026-05-01-mcp-drive-design.md
evals/: README.md
infra/: docker-compose.yml
scripts/: docker-build-all.ps1
supabase/: config.toml
supabase/migrations/: 0001_initial_schema.sql  0002_chunks_content_hash.sql  0003_chunks_to_legacy_backup.sql  20260429100000_definitions_versioning.sql  20260429120000_add_source_documents.sql  20260502100000_add_auth_and_audit.sql  20260502130000_add_scope_and_orcamento.sql  20260504100000_add_city_ibge_code.sql  20260504200000_create_city_table.sql  20260505100000_simplify_project_scope.sql  20260505110000_simplify_projects.sql  20260505120000_estado_check_all_brazilian_states.sql  20260505130000_enable_rls_on_scope_tables.sql  20260505140000_recreate_city_read_policy.sql  20260505150000_drop_chunks_legacy_backup.sql  20260505160000_add_thor_query_ro_role.sql
(+41 files in other folders)
