[project]
name = "oraculo-ai"
version = "0.1.0"
description = "Backend de IA do Oráculo Thórus — FastAPI + LlamaIndex + LangGraph + LiteLLM."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Thórus Engenharia" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "litellm>=1.70.0,<2.0.0",
    "llama-index>=0.14.0,<0.15.0",
    "langgraph>=1.1.0,<2.0.0",
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.30.0",
    "langfuse>=2.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraculo_ai"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
