[project]
name = "oraculo-ai"
version = "0.1.0"
description = "Backend de IA do Oráculo Thórus — FastAPI + LlamaIndex + LangGraph + LiteLLM."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Thórus Engenharia" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "litellm>=1.70.0,<2.0.0",
    "llama-index>=0.14.0,<0.15.0",
    "llama-index-vector-stores-postgres>=0.4.0,<1.0.0",
    "llama-index-embeddings-openai>=0.3.0,<1.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-litellm>=0.6.0,<1.0.0",
    "langchain-mcp-adapters>=0.1.0,<1.0.0",
    "langgraph>=1.1.0,<2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "langfuse>=4.0.0,<5.0.0",
    "opentelemetry-api>=1.30.0,<2.0.0",
    "opentelemetry-sdk>=1.30.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.30.0,<2.0.0",
    "google-auth>=2.30.0,<3.0.0",
    "google-api-python-client>=2.140.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "anthropic>=0.97.0,<1.0.0",
    "instructor>=1.15.0,<2.0.0",
    "mammoth>=1.12.0,<2.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pypdf>=6.10.0,<7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraculo_ai"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
